--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "string-reverse",
   "version": "0.0.1",
-  "description": "creating a package to be published",
-  "main": "index.js",
+  "description": "A simple string reverse package",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/my-typescript-package.git"
+  },
   "scripts": {
-    "test": "node test.js"
+    "build": "tsc",
+    "test": "npm run build && node test/index.test.js"
   },
   "keywords": [
     "test",
     "publish"
   ],
   "author": "David Olufemi",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.14.2",
+    "typescript": "^5.4.5"
+  }
 }
